# grok-bridge-rs

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README-CN.md  README.md  SECURITY.md  SKILL.md  agent.md
.github/workflows/: ci.yml  release.yml
agents/: openai.yaml
src/: hooks.rs  main.rs  protocol.rs  server.rs  session.rs  transport.rs  version_check.rs
webui/: index.html  package-lock.json  package.json  vite.config.js
webui/src/: App.jsx  App.test.jsx  api.js  api.test.js  index.css  main.jsx  sessions.js  sessions.test.js  theme.js  theme.test.jsx
webui/src/components/: AppShell.jsx  EmptyState.jsx  ErrorBoundary.jsx  Header.jsx  InteractiveToggle.jsx  LanguageSwitcher.jsx  LanguageSwitcher.test.jsx  MetaField.jsx  Notice.jsx  SessionLifecycleHint.jsx  SessionLifecycleHint.test.jsx  StatsBar.jsx  StatusBadge.jsx  SubagentCard.jsx  SupervisorGroup.jsx  SupervisorGroup.test.jsx  Terminal.jsx  Terminal.test.jsx  ThemeSwitcher.jsx  UpdateBanner.jsx
webui/src/context/: TerminalIOContext.jsx
webui/src/hooks/: useCollapseState.js  useInteractiveMode.js  useNow.js  useSessionActions.js  useSessionStream.js  useSessionStream.test.jsx  useTheme.js  useVersionPolling.js
webui/src/i18n/: I18nProvider.jsx  constants.js  detect.js  format.js  i18n.test.jsx  index.js  translate.js
webui/src/test/: mockFitAddon.js  mockWebSocket.js  mockXterm.js
webui/src/utils/: base64.js  base64.test.js  constants.js  errors.js  storage.js  terminalFeeds.js  terminalFeeds.test.js  terminalGrid.js  terminalGrid.test.js  terminalHeight.js  ui.js  (+3 more)
(+16 files in other folders)
