[package]
name = "grok-bridge"
version = "0.8.2"
edition = "2024"
description = "A local runtime server and CLI bridge for Grok Build"
license = "MIT"

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "glow", "x11"] }
getrandom = "0.4.3"
interprocess = "2.4.2"
portable-pty = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skrifa = "0.42.1"
tungstenite = { version = "0.30", default-features = false, features = ["handshake"] }
ureq = { version = "2.12", default-features = true, features = ["json"] }
vt100 = "0.16.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
